--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -5,15 +5,40 @@
 
 \begin{thebibliography}{99}
 
+
+\bibitem{DVSShanFu}
+SHAN, Yuanyuan, Jiayun DONG, Jie ZENG, Siyi FU, Yinsen CAI, Yixin ZHANG, and Xuping ZHANG. A~Broadband Distributed Vibration Sensing System Assisted by a~Distributed Feedback Interferometer. IEEE Photonics Journal [online]. 2018, 10(1), 1-10 [cit. 2023-04-17]. ISSN 1943-0655. Dostupné z: doi:10.1109/JPHOT.2017.2776919
+
+\bibitem{perimeterpolsko}
+ZYCZKOWSKI, Marek, Edward M. CARAPEZZA, Mieczyslaw SZUSTAKOWSKI, Norbert PALKA a~Marcin KONDRAT. Fiber optic perimeter protection sensor with intruder localization [online]. In: . 2004-11-30, 71- [cit. 2023-04-18]. Dostupné z: doi:10.1117/12.578186
+
+\bibitem{filka}
+FILKA, Miloslav. Optické přenosy informací pro integrovanou výuku VUT a~VŠB-TUO. Brno: electronic, 20114. ISBN 978-80-214-5064-6.
+
+\bibitem{cabling}
+WOODWARD, Bill, and Andrew OLIVIERO. Cabling The Complete Guide to Copper and Fiber-Optic Networking. 5th edition. Indianapolis, Indiana: John Wiley, 2014. ISBN 978-1-118-80732-3.
+
+\bibitem{scatteringcenterbook}
+WEIK, Martin H. Scattering center. In: WEIK, Martin H. Computer Science and Communications Dictionary [online]. Boston, MA: Springer US, 2001, 2000-11-30, s. 1522-1522 [cit. 2023-04-19]. ISBN 978-0-7923-8425-0. Dostupné z: doi:10.1007/1-4020-0613-6\_16662
+
+\bibitem{sveltedoc}
+Svelte documentation. Documentation [online]. 2023 [cit. 2023-04-20]. Dostupné z: https://svelte.dev/docs
+
+\bibitem{chemsens}
+POSPÍŠILOVÁ, Marie, Gabriela KUNCOVÁ, and~Josef TRÖGL. Fiber-Optic Chemical Sensors and Fiber-Optic Bio-Sensors. Sensors [online]. 2015, 15(10), 25208-25259 [cit. 2023-04-18]. ISSN 1424-8220. Dostupné z: doi:10.3390/s151025208
+
 \bibitem{WangYu2017RDVM}
 
 WANG, Yu, Baoquan JIN, Yuncai WANG, Dong WANG, Xin LIU, Qing BAI: \emph{Real-Time Distributed Vibration Monitoring System Using $\Phi$-OTDR}. IEEE sensors journal [online]. PISCATAWAY: IEEE, 2017, 17(5), 1333-1341 [cit. 2022-11-22]. ISSN 1530-437X. Accessible at: doi:10.1109/JSEN.2016.2642221
 
 \bibitem{dasKislov}
-KISLOV, K. V. a V. V. GRAVIROV: \emph{Distributed Acoustic Sensing: A New Tool or a New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-22]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
+KISLOV, K. V., and V. V. GRAVIROV: \emph{Distributed Acoustic Sensing: A New Tool or a~New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-22]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
 
 \bibitem{dasseismic}
-PARKER, Tom, SHATALIN, Sergey, FARHADIROUSAN Mahmoud: \emph{Distributed Acoustic Sensing – a new tool for seismic applications}. Earthdoc [online]. [cit. 2022-11-22]. Accessible at \(<\)\url{https://doi.org/10.3997/1365-2397.2013034}\(>\)
+PARKER, Tom, SHATALIN, Sergey, FARHADIROUSAN Mahmoud: \emph{Distributed Acoustic Sensing – a~new tool for seismic applications}. Earthdoc [online]. [cit. 2022-11-22]. Accessible at \(<\)\url{https://doi.org/10.3997/1365-2397.2013034}\(>\)
+
+\bibitem{bhundred}
+MERKLEIN, Moritz, Irina V. KABAKOVA, Atiyeh ZARIFI, and Benjamin J. EGGLETON. 100 years of Brillouin scattering: Historical and future perspectives. Applied Physics Reviews [online]. 2022, 9(4), 41306 [cit. 2023-04-21]. ISSN 1931-9401. Accessible at: doi:10.1063/5.0095488
 
 \bibitem{gabai}
 GABAI, Haniel, and AVISHAY Eyal: \emph{On the sensitivity of distributed acoustic sensing.} Optics letters vol. 41,24 (2016): 5648-5651. [online]. [cit. 2022-11-22] doi:10.1364/OL.41.005648
@@ -22,7 +47,7 @@ GABAI, Haniel, and AVISHAY Eyal: \emph{On the sensitivity of distributed acousti
 WANG Z, LU B, YE Q, CAI H.: \emph{Recent Progress in Distributed Fiber Acoustic Sensing with $\Phi$-OTDR}. Sensors (Basel). 2020 Nov 18;20(22):6594. doi: 10.3390/s20226594. PMID: 33218051; PMCID: PMC7698859.
 
 \bibitem{kislov_das_newparadigm}
-KISLOV, K. V. a V. V. GRAVIROV.: \emph{Distributed Acoustic Sensing: A New Tool or a New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-25]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
+KISLOV, K. V.,  and V. V. GRAVIROV.: \emph{Distributed Acoustic Sensing: A New Tool or a~New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-25]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
 
 \bibitem{hdf5doc}
 \emph{The HDF5 Data Model and File Structure} HDF Group [cit. 2022-12-08]. Accessible at \(<\)\url{https://docs.hdfgroup.org/hdf5/develop/_h5_d_m__u_g.html}\(>\).
@@ -35,7 +60,7 @@ HEBER G.: \emph{RESTful HDF5} The HDF Group [cit. 2022-12-08].
 HORNMAN, J.C.: \emph{Field trial of seismic recording using distributed acoustic sensing with broadside sensitive fibre-optic cables.} Geophysical Prospecting [online]. 2017, 65(1), 35-46 [cit. 2022-12-06]. ISSN 0016-8025. Accessible at: doi:10.1111/1365-2478.12358
 
 \bibitem{progress}
-BAO, Xiaoyi a Liang CHEN.: \emph{Recent Progress in Distributed Fiber Optic Sensors}. Sensors (Basel, Switzerland) [online]. BASEL: Mdpi, 2012, 12(7), 8601-8639 [cit. 2022-12-08]. ISSN 1424-8220. Accessible at: doi:10.3390/s120708601
+BAO, Xiaoyi, and Liang CHEN.: \emph{Recent Progress in Distributed Fiber Optic Sensors}. Sensors (Basel, Switzerland) [online]. BASEL: Mdpi, 2012, 12(7), 8601-8639 [cit. 2022-12-08]. ISSN 1424-8220. Accessible at: doi:10.3390/s120708601
 
 \bibitem{dasrayleigh}
 PALMIERI, Luca; SCHENATO, Luca. Distributed optical fiber sensing based on Rayleigh scattering. The Open Optics Journal, 2013, 7.1.
