--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -13,6 +13,24 @@
         \acro{das}
             [DAS]
             {Distributed Acoustic Sensing}
+
+        \acro{dss}
+            [DSS]
+            {Distributed Strain Sensing}
+
+        \acro{dts}
+            [DTS]
+            {Distributed Temperature Sensing}
+        \acro{dvs}
+            [DVS]
+            {Distributed Vibration Sensing}
+        % \acro{}
+        %     []
+        %     {Distributed  Sensing}
+        % \acro{}
+        %     []
+        %     {Distributed  Sensing}
+   
         \acro{generalotdr}
             [OTDR]
             {Optic Time Domain Reflectometry}
@@ -28,6 +46,12 @@
         \acro{sps}
             [SPS]
             {samples per second}
+
+        \acro{svg}
+            [SVG]
+            {Scalable Vector Graphics}
+        \acro{dthree}[D3.js]{Data-Driven Documents}
+        \acro{dom}{DOM}{Document Object Model}
 											% rozvinutí zkratky
 	% \acro{zkTemp}		% název
 	% 	[Šířka levého sloupce Seznamu symbolů a zkratek]								% zkratka
