--- a/text/reseni.tex
+++ b/text/reseni.tex
@@ -1,31 +1,43 @@
+% gyrosope
+% accelerometer
+% seismometer
+% perimeter security (fences)
+% Fiber-optic hydrophones
+% Fiber-optic bio-sensors \bibitem{chemsens}
+
+najzaujimavejsie casti kodu
+dat do prilohy
+
+
+popisat websocket
+asyncio a porovnat s multiprocessmy a multithreading
+
+
 \chapter{Theoretical introduction}
 
 
-\section{Optical reflectometry}
+Light has revolutionized data transmission and made high data rates possible using optical fibers and laser diodes. Apart from the intended usage, data transmission lines made from optical fiber have a new use case in sensing. The optical fiber can be used to measure useful external properties thanks to detection of different light scattering effects of the interaction between the light and the fiber.
 
-Optical reflectometry is used for measurements of optical cables' properties; it is capable of detecting defects, joints, breaks, or other damage and their location on the wire. It is the basis for \ac{generalotdr} or \ac{ofdr} and other optical sensors such as \ac{das}. A~pulse of light is sent from the source, such as a light-emitting diode (LED) or a laser diode (LD). The light travels from the source through the optical fiber in pulses and is reflected from the other side of the wire, through connections, breaks, damage, or imperfections in the material. All of these create some backscattering toward the light source. Rayleigh, Brillouin, and Raman scattering are all different kinds of scattering happening in the fiber \cite{progress}. 
+In this work we will discuss fiber optics, optical reflectometry, distributed sensing, different light scattering effects happening in the fiber.
 
-\subsection{OTDR}
-
-\ac{otdr} is the most widely used method. When a strain is applied to the fiber, it causes phase-shift changes in the light signal. Provides high sensitivity, resolution, and high sampling rates in the frequency range between hertz and kilohertz. \ac{otdr} has limitations in measuring slowly changing effects and noise components.
-
-% \subsection{(\acs{otdr})}   %\acl{otdr} 
-
-% \acl{otdr} 
-
-%https://www.flukenetworks.com/expertise/learn-about/otdr
+\cite{dasKislov}
 
 
-\subsection{OFDR}
 
-\ac{ofdr} analyzes interference of signal between the initial signal and the backscattered signal but focuses on the frequency scan. It requires a highly tunable laser diode as a~source of light. The signal given by \ac{ofdr} contains frequency information that can be processed with the Fourier transformation, and the output would be the position of the reflective elements along the fiber length. There are also other methods to measure light properties such as \textit{C-OFDR} - coherent version of OFDR using light with the frequency with linear dependency but having problems with high noise levels, and \textit{DSS} - Mandelstam-Brillouin \cite{kislov_das_newparadigm}.
+\cite{DVSShanFu}
 
 
-\section{Distributed Acoustic Sensing}
+\section{Fiber-optic sensing}
 
-Implementation of \ac{das} system is usually done by \ac{generalotdr}, \ac{ofdr}, or analysis of other light properties such as polarization and backscatter correlation. \ac{das} allows the measurement of thousands of points on an optical wire without the need to cut the wire or have multiple sensors distributed along the wire. The measurement mechanism is based on optical reflectometry the same as in DTS (distributed temperature sensing), which is a variant of \ac{generalotdr}. Measurement is based on the sending of pulses of light into the optical fiber. The fiber creates a small light scattering (e. g. Rayleigh scattering) in the glass that travels back to the sensing unit (on the same side as the light source), which can be interpreted on the basis of the time of arrival as position on the wire. Backscattering light from the optical fiber segment is detected at the light source and has changes in amplitude or phase, which means that the fiber wire segment is affected in some way. \ac{das} is used in a wide range of applications, from locating seismic activity, locating trains along the train tracks, as a~gyroscope or an accelerometer or even as a~microphone \cite{WangYu2017RDVM}, \cite{kislov_das_newparadigm}.
+Fiber-optic sensing uses optical fibers to measure different external properties. This works by 
 
-\ac{das} uses optical fiber since many sensors are capable of detecting vibrations along the fiber \cite{gabai}. These sensors allow for the measurement of acoustic properties (frequency, amplitude, and phase) \cite{WangYu2017RDVM}. 
+is useful in environments that would be dangerous or harsh otherwise. Environments such as flammable, explosive, high voltage or environments that would create electromagnetic noise in other kinds of sensors. It uses fiber-optic cables as sensors.
+
+
+For usesFiber optic cables used for 
+% Advantages wire is stable, can be submerged in chemicals \bibitem{chemsens}
+
+
 
 There are two types of optical fiber sensors:
 \begin{enumerate}
@@ -33,12 +45,140 @@ There are two types of optical fiber sensors:
     \item Distributed - The sensing element is the optical wire and can measure at many points along the optical wire. One of the great benefits of this approach is the possibility of using existing telecommunication infrastructure to build the sensing network.
 \end{enumerate}
 
+\subsection{Perimeter security}
+
+% In this subsection we will discuss different fiber optic sensors that were used for perimeter protection. 
+In the early 2000s perimeter protection using fiber optics was based on breaking or cutting the fiber which then triggered an alarm. This is good enough for one time use, because after the wire is broken there is no choice but to replace or repair the wire. This system can not tell the location when using single wire. Newer systems used \textit{Sagnac effect}, which uses Sagnac interferometer and a closed loop made of fiber optic wires for example 3x3\footnote{three by three} wire system. Sagnac interferometer detects changes in phase of light and thanks to signal processing and calculating the the time difference between amplitudes the position of intruder is calculated. Such interferometer has conversion unit from optical to electric signal. The electric signal is then sampled using fast A/D converter with high sampling rates. The accuracy of such system is 20-50 meters which is more than sufficient for perimeter protection\cite{perimeterpolsko}. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\linewidth]{obrazky/sagnac_interrogator.png}
+    \caption{3x3 system for perimeter protection using two Sagnac interferometers\cite{perimeterpolsko}}
+    \label{fig:sagnac}
+\end{figure}
+
+Nowadays thanks to research and advancements in technology new devices based on DAS systems are used. These systems use scattering effects that happen in the fiber during the passage of photons through the medium that the fiber is made of. These effects are then analyzed at the source of light. The light bounces from imperfections in the fiber and is propagated backwards as scattering (\textit{backscattering}). There is nothing special happening when the fiber is not moving but when the fiber is affected in any way for example by vibrations of an intruder or just by voice alone the backscattering changes. These changes can be then analyzed, categorized as an intrusion.
+
+
+\section{Optical fibers}
+
+Optical sensing uses existing fiber optic transmission lines it is important to account for different kinds of optical fibers, materials, production methods.
+
+Optical fibers consist of three main elements \textit{core}, \textit{cladding} and \textit{coating}. Materials from which core and cladding are made are plastic or glass $Si_2O_3$. Dopants, such as $GeO_2$, $P_2O_5$, $B_2O_3$, can be added to all-glass fibers to adjust refractive index. The core usually has higher refractive index than cladding by about \qty{1}{\si{\percent}}. Lowering refractive index can be done by doping fluorine, which is done in the core when the refracting index is too high and needs to be lowered\footnote{https://www.rp-photonics.com/fiber\_core.html}. The radius of core ranges from \qty{3.7}{\si{\micro}\meter} to \qty{200}{\micro\meter} and radius of cladding is up-to \qty{140}{\si{\micro}\meter}\cite{}.
+
+Plastic optics uses organic material in the form of polymers - chains. Materials used are acrylic, poly-carbonate, polystyrene or liquid silicone. The core of plastic fiber has popular diameter of \qty{980}{\si{\micro}\meter}.
+
+Although the purpose of coating is simply protective without it the fiber would be very fragile. It is usually without special color but can be painted to ease identification of individual fibers. There are multiple layers of coating at least primary and secondary. Primary is softer to allow bending of the fiber. Secondary is harder to protect inner layers. Materials such as acrylate, silicone, polyimid or carbon are used depending on application of the optical fiber. for example. For example acrylate has limited temperature resistance, in this case silicone is better as it is heat resistant up to \qty{200}{\celsius}\cite{cabling}. For more extreme applications Polyimid is used as it can withstand temperatures up to \qty{350}{\celsius} and it is also resistant to chemicals and abrasion\cite{cabling}.
+
+\subsection{Fiber modality}
+
+Optical fibers can have different kinds of modality depending on manufacturing processes, design decisions and it is a desired effect. We differentiate multimode and single-mode fiber optic cables. 
+
+Multimode optical fibers have much larger core diameter compared to the diameter of cladding. This enables 
+
+
+Single mode fibers have single propagation mode  per polarization fir a given wavelength. They have very small core diameter, only few micrometers, relative to the cladding diameter. Since they use only single mode there is no inter-modal dispersion\footnote{https://www.rp-photonics.com/single\_mode\_fibers.html}
+
+
+
+
+
+
+Zamedzeny odposluch - po
+
+When light travels from one medium into another reflection and refraction occurs. ReflectionFresnel reflection 
+
+
+
+
+\section{Light scattering effects}
+
+Light precisely photons travelling through a medium - atmosphere, glasses, glass optical fiber or any other medium can bounce from what is called \textit{scattering centers} in the medium. \textit{scattering centers} can be any non-unifomities in the medium such as vacancy defects (missing atoms in otherwise uniform structure), foreign particles, bubbles, trapped gas molecules, fractures, micro-cracks, changes in refractive index, density fluctuations, manufacturing imperfections and others\cite{scatteringcenterbook}.
+
+
+
+\label{miesctt}
+\subsection{Mie scattering}
+
+Mie scattering is optical phenomenon happening when light is bouncing from \textit{scattering centers}\footnote{} bigger than the wavelength of the light
+
+ amplitudes are stronger for forward scattering in Mie scattering
+
+
+\subsection{Rayleigh scattering}
+
+Rayleigh scattering is an optical phenomenon named after British physicist Lord Rayleigh. Light is scattered from scattering centers much smaller that the wavelength of the light for example individual molecules or atoms. This is opposite to Mie scattering \ref{miesctt}, where light is scattering from larger scattering centers. Difference is that amplitudes are stronger for forward scattering in Mie scattering\footnote{https://www.rp-photonics.com/rayleigh\_scattering.html}. Compared to other scattering processes Rayleigh is \textit{linear} scattering process whereas \textit{Raman} and \textit{Brillouin} scatterings are \textit{nonlinear}\footnote{Nonlinear light effects occur when the output intensity does not increase proportionally to the input intensity; for example doubling the optical input intensities does not result in double the output intensity. These nonlinear effects tend to weaken significantly at low optical intensities.}.
+
+Only a small portion of the backscattered light gets back to the source. Most of it leaves the fiber on the sides. 
+
+
+Not all scattering centers when solidified in a medium cause Rayleigh scattering. At a wavelength of about 0.95 μm (microns) glass optical fibers have a high attenuation band, which is caused by scattering and absorption by hydroxide ions\cite{scatteringcenterbook}. Silica glass is an amorphous material and as such has random density fluctuations due to its irregular microscopic structure. This can be limited by an annealing process but can not be removed completely\footnote{https://www.rp-photonics.com/rayleigh\_scattering.html}.
+
+
+
+
+
+
+\subsection{Raman scattering}
+
+The effect photons have when interacting with the crystal lattice of glass is called \textit{Raman scattering}. A transparent optical medium, such as glass, has a crystal lattice. The lattice is naturally vibrating and causing a delayed nonlinear response to the light passing through it. The photon travelling through the medium experiences a loss in energy due to interactions with the medium. This is also called \textit{inelastic scattering}. 
+
+% The losses happen as vibration energy is exchanged between what are called \textit{phonos}. 
+
+Raman scattering can be measured when sending two light waves with different wavelengths through the optical medium. The  signal with longer wavelength experiences optical amplification in expense of the one with shorter wavelength. This is used in Raman lasers, Raman amplifiers or Raman spectroscopy\footnote{https://www.rp-photonics.com/raman\_scattering.html}.
+
+\subsection{Brillouin scattering}
+
+
+https://www.rp-photonics.com/brillouin\_scattering.html
+Brillouin scattering is used in Brillouin spectroscopy
+\cite{bhundred}
+
+\section{Optical reflectometry}
+
+Optical reflectometry is used for measuring of properties of optical cables; it is capable of detecting defects, joints, breaks, or other damage and their location on the wire. It is the basis for \ac{generalotdr} or \ac{ofdr} and other optical sensors such as \ac{das}. A~pulse of light is sent from the source, such as a light-emitting diode (LED) or a laser diode (LD). The light travels from the source through the optical fiber in pulses and is reflected from the other side of the wire, through connections, breaks, damage, or imperfections in the material. All of these create some backscattering toward the light source. Rayleigh, Brillouin, and Raman scattering are all different kinds of scattering happening in the fiber \cite{progress}. 
+
+\subsection{OTDR}
+
+\ac{otdr} is the most widely used method. When a strain is applied to the fiber, it causes phase-shift changes in the light signal. Provides high sensitivity, resolution, and high sampling rates in the frequency range between hertz and kilohertz. \ac{otdr} has limitations in measuring slowly changing effects and noise components.
+
+\subsection{(\acs{otdr})}   %\acl{otdr} 
+
+\acl{otdr} 
+
+https://www.flukenetworks.com/expertise/learn-about/otdr
+
+
+\subsection{OFDR}
+
+\ac{ofdr} analyzes interference of signal between the initial signal and the backscattered signal but focuses on the frequency scan. It requires a highly tunable laser diode as a~source of light. The signal given by \ac{ofdr} contains frequency information that can be processed with the Fourier transformation, and the output would be the position of the reflective elements along the fiber length. There are also other methods to measure light properties such as \textit{C-OFDR} - coherent version of OFDR using light with the frequency with linear dependency but having problems with high noise levels, and \textit{DSS} - Mandelstam-Brillouin \cite{kislov_das_newparadigm}.
+
+
+\section{Distributed Sensing}
+
+Distributed sensing (in general) is technology using optical fiber as an array of sensors. It was started from the field of optical reflectometry. With use of distributed virtual sensors along the fiber that are not real devices rather a clever way of measuring differences in the light signal properties such as changes in phase. It can measure tension, compression, temperature, vibrations other strain that is having an impact on the fiber and consequently the light passing through it\cite{dasKislov}.
+
+We distinguish multiple distributed sensing systems depending on what is measured:
+\begin{itemize}
+    \item \ac{das} - recording sound
+    \item \ac{dvs} - vibration detection
+    \item \ac{dss} - twisting, pulling, bending
+    \item \ac{dts} - temperature measurements
+\end{itemize}
+
+\subsection{Distributed Acoustic Sensing}
+
+Implementation of \ac{das} system is usually done by \ac{generalotdr}, \ac{ofdr}, or analysis of other light properties such as polarization and backscatter correlation. \ac{das} allows the measurement on thousands of points on an optical wire without the need to cut the wire or have multiple sensors distributed along the wire. The measurement mechanism is based on optical reflectometry the same as in DTS (distributed temperature sensing), which is a variant of \ac{generalotdr}. During measurement pulses of light are sent into the optical fiber. The fiber creates a light scattering (e. g. Rayleigh scattering) in the glass that travels back to the sensing unit (on the same side as the light source), which can be interpreted on the basis of the time of arrival as position on the wire. Backscattering light from the optical fiber segment is detected at the light source and has changes in amplitude or phase, which means that the fiber wire segment is externally affected in some way. \ac{das} is used in a wide range of applications, from locating seismic activity, locating trains along the train tracks, as a~gyroscope or an accelerometer or even as a~microphone \cite{WangYu2017RDVM}, \cite{kislov_das_newparadigm}.
+
+\ac{das} uses optical fiber as many sensors along its length. The fiber is  capable of detecting vibrations along it can also detect acoustic properties as they are also vibrations but of sound. These sensors allow for the measurement of acoustic properties such as frequency, amplitude, and phase \cite{WangYu2017RDVM}. 
+
+
 % \subsection{Raleigh scattering}
 
 % For a given optical frequency, sensors based on Raleigh scattering can detect the intensity, phase, and polarization of light.   
 % %TODO
 
-\section{iDAS}
+\subsection{iDAS}
 
 The distributed acoustic sensor is a~new addition to distributed optical fiber sensors used in the energy industry and can be used in many applications, for example, in detecting seismic activity. iDAS (intelligent distributed acoustic sensor) is one type of DAS sensor. One of the applications of this sensor is to record an acoustic signal. To determine the signal fidelity, a certain part of the wire is subjected to a known signal, e.g. sine wave. A measurement is made, and the result is compared with the existing recording device. The result suggests that iDAS has very good signal properties. The measured signal shows that almost no measurable crosstalk is exhibited between the two sensing channels on the wire.
 
@@ -57,12 +197,12 @@ The maximum sampling rate can be calculated from the speed of light that travels
 
 \section{OptaSense ODH-F}
 
-Data used in this project were obtained from \textit{OptaSense ODHF Distributed Acoustic Sensing Interrogator}\footnote{\url{https://www.optasense.com/technology/odhf/}}. This device is capable of monitoring optical fiber up to \qty{50}{\km} long (in qualitative mode). It is used for in-well flow monitoring, pipeline integrity management, and border security. OptaSense comes with \textit{DxS Visualization Software} which is capable of analyzing and processing output data from the unit. It can show the signal spectrum in a waterfall graph and create analysis, process the signal using \ac{fft}, and extract data to \verb|.wav| format. It has the limitation that it can only run in the Windows ecosystem and is proprietary software, so scientists cannot really change how they work with the data or how it is displayed.
+Data used in this project were obtained from \textit{OptaSense ODHF Distributed Acoustic Sensing Interrogator}\footnote{\url{https://www.optasense.com/technology/odhf/}}(Interrogator). This device is capable of monitoring optical fiber up to \qty{50}{\km} long (in qualitative mode). It is used for in-well flow monitoring, pipeline integrity management, and border security. OptaSense comes with \textit{DxS Visualization Software} which is capable of analyzing and processing output data from the unit. It can show the signal spectrum in a waterfall graph and create analysis, process the signal using \ac{fft}, and extract data to \verb|.wav| format. It has the limitation that it can only run in the Windows ecosystem and is proprietary software, so scientists cannot really change how they work with the data or how it is displayed.
 
 
 \subsection{HDF5 file format}
 
-In this project, the output of the DAS system is in \ac{hdf}. Data from the \ac{das} sensor is collected on the server and saved in \ac{hdf} file. \ac{hdf} creates a model for managing and storing data. The HDF Group\footnote{\url{https://www.hdfgroup.org/}} is the maintainer of the software package. Specifically, the \ac{hdf} format is used to store data, but it is only one of the three parts that make up the \ac{hdf} model. Parts of the \ac{hdf} model are:
+The data captured by the Optasense Interrogator is collected in \ac{hdf} and saved into a file with \textit{.h5} suffix. \ac{hdf} creates a model for managing and storing data. The HDF Group\footnote{\url{https://www.hdfgroup.org/}} is the maintainer of the format and its coresponding software package. Specifically, the \ac{hdf} format is used to store data, but it is only one of the three parts that make up the full \ac{hdf} model. Parts of the \ac{hdf} model are:
 
 \begin{itemize}
     \item File format - files ending with .h5
@@ -315,9 +455,9 @@ WebSockets (or WebSocket API) enable two-way communication over TCP. It was stan
 
 \subsubsection{Svelte}
 
-Svelte is a component framework written in JavaScript, using a new approach to building web applications. Instead of looking for differences in virtual DOMs as React does, which is done in the browser and consumes quite a lot of resources, Svelte does everything at the compilation stage. The output of the compilation is a JavaScript file \verb|bundle.js|, which contains all the necessary code to run the web application or better said, it manipulates the DOM directly. The result is a fast and reactive web page, it also saves resources, and the code can be run on small devices like handheld devices. Web development is also very enjoyable because compilation does not take long and the result of changes can be visible immediately. Svelte also integrates CSS stylesheets into the components. The structure of a Svelte component consists of three parts - JavaScript code tag \verb|<script>| a style tag \verb|<style>| and other HTML elements. 
+Svelte is a component framework written in JavaScript, using a new approach to building web applications. Instead of looking for differences in virtual DOMs as React does, which is done in the browser and consumes quite a lot of resources, Svelte does everything at the compilation stage. The output of the compilation is a JavaScript file \verb|bundle.js|, which contains all the necessary code to run the web application or better said, it manipulates the DOM directly. The result is a fast and reactive web page, it also saves resources, and the code can be run on small devices like handheld devices. Web development is also very enjoyable because compilation does not take long and the changes can be visible immediately. The structure of a Svelte component consists of three parts - JavaScript code tag \verb|<script>| a style tag \verb|<style>| and other HTML elements. 
 
-Svelte is capable of client-side rendering and server-side rendering, but it does not provide more advanced features like page routing. For this purpose, the Svelte team created SvelteKit, which is a~framework for building web applications and allows page routing. Routing is folder-based - the developer creates routing by creating a folder and file structure.
+Svelte does not provide more advanced features like page routing. For this purpose, the Svelte team created SvelteKit, which is a~framework for building web applications and allows page routing. Routing is folder-based - the developer creates routing by creating a folder and file structure.
 
 \begin{verbatim}
 src/routes/about/+page.svelte <=> /about
@@ -326,11 +466,11 @@ src/routes/about.svelte <=> /about
 
 Svelte has been changing and has become a Vite \footnote{\url{https://vitejs.dev}} plugin. Vite provides fast development experience by running a development server, in the case of Svelte - Hot Module Replacement (HMR)\footnote{\url{https://vitejs.dev/guide/features.html\#hot-module-replacement}}. This way, every change made during development can be immediately seen in the browser without reloading the page, which makes development much faster and more enjoyable. It is necessary to say that Svelte is still in development and although it is now at version 3 it is possible that it will change in the future. 
 
-When fetching the data from the server, it is good practice to move this functionality to a Svelte Store. The Svelte store is a separate JavaScript file that can be accessed from multiple components. From a programming point of view, a store is an object with a \verb|subscribe()| function. An example of a WebSocket implementation in Svelte can be the Svelte component library \textit{svelte-websocket-store}\footnote{\url{https://github.com/arlac77/svelte-websocket-store}}.
+When fetching the data from the server, it is good practice to move this functionality to a Svelte Store. From a programming point of view, a store is an object with a \verb|subscribe()| function. An example of a WebSocket implementation in Svelte can be the Svelte component library \textit{svelte-websocket-store}\footnote{\url{https://github.com/arlac77/svelte-websocket-store}}.
 
 \subsection{Real-time capabilities}
 
-The data bandwidth (the amount of data necessary to be sent from the server side to the client side) of the application is the biggest factor. The OptaSense Interrogator can produce quite a lot of data, but if it is saved in an HDF5 file, it is quite small. As discussed in Section \ref{sec:readhdf}, a \qty{10}{\second} file produces around \qty{52}{MB} of data. When this data is transformed into text form, it has only \qty{420}{MB} and when transformed into JSON, it has \qty{946}{MB} as the data are read at \ac{SPS} \qty{10}{kSPS}\footnote{\ac{SPS}}. Data will be displayed on a display with standard resolution and cannot display \qty{10000}{SPS} on a small part of the display. Data processing is necessary for this purpose. 
+The data bandwidth (the amount of data necessary to be sent from the server side to the client side) of the application is the biggest factor. The OptaSense Interrogator can produce quite a lot of data, but if it is saved in an HDF5 file, as it is compressed it is quite small. As discussed in Section \ref{sec:readhdf}, a \qty{10}{\second} file produces around \qty{52}{MB} of data. When this data is transformed into text form, it has only \qty{420}{MB} and when transformed into JSON, it has \qty{946}{MB} as the data are read at  \qty{10}{kSPS}\footnote{\ac{sps}}. Data will be displayed on a display with standard resolution and cannot display \qty{10000}{\ac{sps}} on a small part of the display. Data processing is necessary for this purpose. 
 
 % \subsubsection{Data processing}
 
@@ -347,7 +487,7 @@ The data bandwidth (the amount of data necessary to be sent from the server side
 
 \subsection{Software design for DAS data visualization}
 
-As we discussed in Section \ref{sec:ossix}, it is possible to create such software to display the data in real time. The application was a native Windows application, and the requirement for this application was to be able to run on multiple platforms. The chosen platform is the Python backend, opening files, processing the data, and sending the data into the client application using Svelte. The backend will process the data as explained in \ref{lab:processingdata}. The waterfall graph will be an HTML Canvas element that displays the data in real-time, redrawing itself as the data arrive at the browser. For ease of displaying the data in Canvas, D3js will be used. D3 will, for example, apply a color map to the correct scale according to the data. The user interface written in Svelte will also have inputs to change the properties of the visualization so that the user can select specific channels from the data, choose subsampling effect properties, cutting the frequency range. The ability to export the data to a WAV file will also be implemented the same way as done in Section \ref{lab:hdftowav}.
+As we discussed in Section \ref{sec:ossix}, it is possible to create such software to display the data in real time. The application was a native Windows application, and the requirement for this application was to be able to run on multiple platforms. The chosen platform is the Python backend, opening files, processing the data, and sending the data into the client application using Svelte. The backend will process the data as explained in \ref{lab:processingdata}. The waterfall graph will be an HTML Canvas element that displays the data in real-time, redrawing itself as the data arrive at the browser. For ease of displaying the data in Canvas, D3.js will be used. D3 will, for example, apply a color map to the correct scale according to the data. The user interface written in Svelte will also have inputs to change the properties of the visualization so that the user can select specific channels from the data, choose subsampling effect properties, cutting the frequency range. The ability to export the data to a WAV file will also be implemented the same way as done in Section \ref{lab:hdftowav}.
 
 \begin{figure}
     \centering
@@ -368,3 +508,118 @@ Uploading files into the browser using REST API was also tested. Python's \verb|
     \caption{Prototype of DAS visualization application}
     \label{fig:prototypesvelte}
 \end{figure}
+
+
+
+
+
+
+\chapter{Out of context}
+
+\subsection{Colormaps}
+
+Choosing a suitable colormap is crucial when displaying data to users. The colormap's purpose is to understandably represent the data so that it is easy for users to understand what is displayed in front of them. A colormap with equal steps between colors and steps in data is best perceived - this is called \textit{perceptually uniform colormap}. It was found that perception in change in color is best understood by human brain, rather than changes in hue. 
+
+There are 4 basic colormap classes:
+
+\begin{itemize}
+    \item Sequential - used for ordering. Incremental changes in lightness and saturation of single color often with single hue
+    \item Diverging - 
+    \item Cyclic - 
+    \item Qualitative - 
+\end{itemize}
+source https://matplotlib.org/stable/tutorials/colors/colormaps.html
+
+https://github.com/d3/d3-scale-chromatic
+
+
+
+\section{Svelte}
+
+% A Svelte application consists of 
+
+
+This subsection is based on Svelte documentation\cite{sveltedoc} and as Svelte is a new framework and its documentation is too simple for more complicated projects we also rely on what we learned from forums and videos.
+
+\subsection{Components}
+
+\subsection{Stores}
+
+A \textit{store} is in general any Javascript object that correctly implements basic reactive methods \verb|.subscribe|,  \verb|.unsubscribe| and (optionally) \verb|.set| or \verb|update|. This allows basic reactive behaviour and makes it possible for Svelte components to then use this object to access and change its values. Stores are usually defined in \verb|.js| files and can be defined either as single store in a single file or multiple stores defined in a file. 
+
+There are three predefined Svelte stores implemented in \verb|svelte/store| module. They are:
+
+\begin{itemize}
+    \item \verb|readable()| - creates a store whose value cannot be set from components it does not implement the \verb|set| or \verb|update| methods
+    \item \verb|writable()| - creates a store which has values that can be set from the components. The writable store implements \verb|set| and \verb|update| methods. \verb|set| saves the the value given and saves it. \verb|update| method takes a callback that takes the existing store's value as its arguments and returns a new value to be set to the store.
+    \item \verb|derived()| - creates a store whose value is dependent on other store. It runs initially when the first subscriber subscribes and whenever the dependency changes.
+\end{itemize}
+
+
+\section{HTML chart rendering}
+
+For in browser rendering in there are two main options using HTML canvas rendering or using \ac{svg} elements. In this section we will discuss both, their advantages over each other and their drawbacks. In general Canvas rendering is better performing than \ac{svg} rendering. This is due to the fact that SVG is based on a \ac{dom} structure\footnote{text based structure defining objects that are displayed in the web page. https://developer.mozilla.org/en-US/docs/Web/API/Document\_Object\_Model/Introduction}. It is more suitable for large datasets and graphics heavy games and animations. 
+
+\footnote{https://www.chartjs.org/docs/latest/\#canvas-rendering}
+
+
+\subsection{Canvas graphics}
+
+JavaScript makes drawing to the HTML \verb|<canvas>| element possible with the use of \textit{Canvas API} or \textit{WebGL API}. It can be used for rendering data visualizations, game graphics, real-time video processing and animation. Canvas API focuses on 2D graphics. Libraries using Canvas API that make rendering to canvas easier differ on the usecase - EaselJS (web game development), Konva.js (desktop and mobile applications), Chart.js and many more. Canvas rendering depends on the resolution of the screen. 
+
+\verb|<canvas>| tag is used for drawing graphics. You can imagine canvas to be a rectangular area with the starting point at the top left corner with coordinates (0,0) and defined width and height. By default this area is transparent. When we want to draw to it we need to call functions from the Canvas API. They define basic shapes and primitives that can drawn on the canvas. Rectangles and paths are the only primitive shapes that can be drawn to \verb|<canvas>| element and more complex shapes can be drawn by combining these primitives\footnote{https://developer.mozilla.org/en-US/docs/Web/API/Canvas\_API/Tutorial/Drawing\_shapes}. Basic example of drawing to canvas can be seen in the code snippet \ref{lst:canvas.example}. Usually the functions define either certain shapes that are filled with color and are basically added to the canvas then there are "clearing" functions that remove what is displayed or creating transparent areas and lastly there are "stroke" functions that create lines. 
+
+\begin{lstlisting}[frame=single,numbers=right,caption={An example implementation of drawing to canvas.},label=lst:canvas.example,basicstyle=\ttfamily\small, keywordstyle=\color{black}\bfseries\underbar,]
+function draw() {
+    // first we need reference to canvas element
+    const canvas = document.getElementById("canvas");
+
+    // next we need context to draw to
+    const ctx = canvas.getContext("2d");
+
+    /**** Drawing  ****/
+    
+    // drawing rectangle to canvas
+    ctx.fillRect(10, 10, 100, 100);
+}
+\end{lstlisting}
+
+
+
+
+
+
+
+
+These interactions are achievable in the canvas rendering but usually require "hacky" solutions like hidden canvas or like invisible layers. Having more than 1000 objects rendered on screen that can be selected can cause performance issues.
+
+The biggest drawback of displaying data with canvas is its lack of interactivity with displayed elements and poor text rendering capabilities\footnote{https://www.w3schools.com/html/html5\_svg.asp}.
+
+WebGL can draw 2D and 3D graphics to the canvas element.
+
+
+\subsection{Drawing to canvas and animation}
+
+
+
+
+
+Creating animations on canvas element is done by calling functions 
+window.requestAnimationFrame()
+
+
+\subsection{HTML SVG graphics}
+
+\ac{svg} is an XML-based markup language developed by W3C\footnote{World Wide Web Consortium www.w3.org}. It describes 2D vector graphics in XML text files. SVG supports three types of graphic objects: vector shapes, bitmap images and text. The main advantage compared to bitmap graphics is that all the elements can be rendered at any size without the loss of quality. 
+
+The description of graphics elements is the same way as the web page description written in HTML to the final web page. There are tags for different geometrical objects, for examples rectangle, ellipse, line and animations. Everything is defined in an XML text file which can be edited, searched or compressed\footnote{https://developer.mozilla.org/en-US/docs/Web/SVG}.
+
+Data visualization using \ac{svg} graphics results in smooth and sharp visualizations. It also enables interactivity with each displayed object - selecting, hovering or zooming. Libraries for \ac{svg} manipulation are basically manipulating text, based on the data given. \ac{dthree} is a JavaScript libarary using HTML, SVG and CSS to visualize data. It can bind data to the HTML DOM and then apply data-driven transformations. \ac{dthree} allows developers to create custom visualizations as it is not a charting library rather a set of tools used for data visualization. It is also the base for other charting libraries that build on top of \ac{dthree}'f framework. They include Plotly's JavaScript implementation, C3.js\footnote{https://c3js.org/} or Britecharts\footnote{https://britecharts.github.io/britecharts/}.
+
+
+
+
+Python implementacia - backend
+
+Generator
+websockets
