--- a/text/literatura.tex
+++ b/text/literatura.tex
@@ -34,6 +34,9 @@ WANG, Yu, Baoquan JIN, Yuncai WANG, Dong WANG, Xin LIU, Qing BAI: \emph{Real-Tim
 \bibitem{dasKislov}
 KISLOV, K. V., and V. V. GRAVIROV: \emph{Distributed Acoustic Sensing: A New Tool or a~New Paradigm. Seismic instruments} [online]. Moscow: Pleiades Publishing, 2022, 58(5), 485-508 [cit. 2022-11-22]. ISSN 0747-9239. Accessible at: doi:10.3103/S0747923922050085
 
+\bibitem{hydrophones}
+MATSUMOTO, Hiroyuki, Eiichiro ARAKI, Toshinori KIMURA, et al. Detection of hydroacoustic signals on a fiber-optic submarine cable. Scientific reports [online]. England: Nature Publishing Group, 2021, 11(1), 2797-2797 [cit. 2023-04-22]. ISSN 2045-2322. Dostupné z: doi:10.1038/s41598-021-82093-8
+
 \bibitem{dasseismic}
 PARKER, Tom, SHATALIN, Sergey, FARHADIROUSAN Mahmoud: \emph{Distributed Acoustic Sensing – a~new tool for seismic applications}. Earthdoc [online]. [cit. 2022-11-22]. Accessible at \(<\)\url{https://doi.org/10.3997/1365-2397.2013034}\(>\)
 
@@ -71,9 +74,19 @@ OptaSense OS6 Visualization Software Demo. YouTube, uploaded by OptaSense, 22 J
 \bibitem{websock}
 Melnikov, A., Fette, I.: \emph{The WebSocket Protocol}. RFC Editor. [online] [cit. 2022-08-12]. Accessible at: \(<\)\url{https://doi.org/10.17487/RFC6455}\(>\).
 
+\bibitem{colormap}
+Choosing Colormaps in Matplotlib. Choosing Colormaps in Matplotlib [online]. The Matplotlib development team, c2002–2012 [cit. 2023-04-29]. Dostupné z: https://matplotlib.org/stable/tutorials/colors/colormaps.html
+
+
+\bibitem{fog}
+The fiber-optic gyroscope: Herve Lefevre Artec House, 1993, ISBN 0-89006-537-3, pp. 300, £65. Optics and Laser Technology [online]. Elsevier, 1993, 25(6), 406-406 [cit. 2023-04-22]. ISSN 0030-3992. Dostupné z: doi:10.1016/0030-3992(93)90010-D
+
+
 \bibitem{cors} 
 \emph{Cross-Origin Resource Sharing (CORS)} mozilla.org [cit. 2022-12-08]. Accessible at \(<\)\url{https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS}\(>\).
 
+\bibitem{scattering.comparison}
+Illustrative spectra of light scattering in optic fibers. Springer Link [online]: Springer [cit. 2023-04-25]. Dostupné z: https://link.springer.com/article/10.3103/S0747923922050085/figures/6
 
 % @misc{rfc6455,
 %     series =    {Request for Comments},
