--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -52,6 +52,7 @@
             {Scalable Vector Graphics}
         \acro{dthree}[D3.js]{Data-Driven Documents}
         \acro{dom}{DOM}{Document Object Model}
+        \acro{tcp}{TCP}{Transmission Control Protocol}
 											% rozvinutí zkratky
 	% \acro{zkTemp}		% název
 	% 	[Šířka levého sloupce Seznamu symbolů a zkratek]								% zkratka
